--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         class="icon"
                       />
                       <h3>Experience</h3>
-                      <p> <img style="height:3rem"
+                      <p> <img 
                         src="./assets/number-four.png"
                         alt="3"
                         class="icon"
